	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14.rc
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2003.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2003.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2005.sln
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/Tutorial14_2005.vcproj
	deleted:    ZGame/Dx.Sdk/Dx10.07aug.Tut/Tutorial14/directx.ico

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/02.18_15_29.27.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial09/Tutorial09.cpp
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial10/Tutorial10.cpp
	modified:   ZGame/Dx.Sdk/DX10_07Aug/Dx10.07aug.Tut/Dx10.07aug.Tut/Tutorial11/Tutorial11.fx

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/06.15_26_24.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/10.19_17_31.21.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/11/17.13_13_29.51.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt
